Add images and basic css

--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
-<html> 
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="index.css" />
+    <title>hw-03</title>
+  </head>
 
-<head>
-    <meta charset=utf-8/>
-</head>
-
-
-<body>
-
-
-</body>
-
+  <body>
+    <h1>HTML+CSS & Marks+Channels</h1>
+    <div class="flex-container">
+      <div class="flex-item">
+        <img src="/img/bubble_and_pie_chart.png" />
+      </div>
+      <div class="flex-item">
+        <img src="/img/bump_chart.png" />
+      </div>
+      <div class="flex-item">
+        <img src="/img/mind_map.png" />
+      </div>
+      <div class="flex-item">
+        <img src="/img/stacked_bar_chart.png" />
+      </div>
+    </div>
+        <h3>Acknowledgements:</h3>
+        <div class="acknowledgements-container">
+        <ul>
+          <li>
+            <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"
+              target="_blank">A Complete Guide to Flexbox</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://stackoverflow.com/questions/3029422/how-do-i-auto-resize-an-image-to-fit-a-div-container"
+              >How do I auto-resize an image to fit a 'div' container?</a
+              target="_blank">
+          </li>
+          <li>etc</li>
+        </ul>
+    </div>
+  </body>
 </html>
