Add border & details

--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
     <div class="flex-container">
       <div class="flex-item">
         <img src="/img/bubble_and_pie_chart.png" />
+        <p class="paragraph">paragraph</p>
       </div>
       <div class="flex-item">
         <img src="/img/bump_chart.png" />
+        <p class="paragraph">paragraph</p>
       </div>
       <div class="flex-item">
         <img src="/img/mind_map.png" />
+        <p class="paragraph">paragraph</p>
       </div>
       <div class="flex-item">
         <img src="/img/stacked_bar_chart.png" />
+        <p class="paragraph">paragraph</p>
       </div>
     </div>
         <h3>Acknowledgements:</h3>
