--- a/index.html
+++ b/index.html
@@ -26,6 +26,29 @@
         <p class="paragraph">paragraph</p>
       </div>
     </div>
+    <div class="shapes-container">
+      <svg>
+        <rect class="rect" width="150" height="150"/>
+      </svg>
+      <svg>
+        <circle class="circle" cx="75" cy="75" r="75"/>
+      </svg>
+      <svg>
+        <rect class="rect" width="150" height="150"/>
+      </svg>
+      <svg>
+        <circle class="circle" cx="75" cy="75" r="75"/>
+      </svg>
+      <svg>
+        <rect class="rect" width="150" height="150"/>
+      </svg>
+      <svg>
+        <circle class="circle" cx="75" cy="75" r="75"/>
+      </svg>
+      <svg>
+        <rect class="rect" width="150" height="150"/>
+      </svg>
+    </div>
         <h3>Acknowledgements:</h3>
         <div class="acknowledgements-container">
         <ul>
@@ -40,8 +63,14 @@
               >How do I auto-resize an image to fit a 'div' container?</a
               target="_blank">
           </li>
-          <li>etc</li>
+          <li>
+            <a href="https://www.w3schools.com/graphics/svg_circle.asp"
+                >How to create an svg circle?</a
+                    target="_blank">
+          </li>
         </ul>
     </div>
   </body>
 </html>
+
+
