--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
     <div class="flex-container">
       <div class="flex-item">
         <img src="/img/bubble_and_pie_chart.png" />
-        <p class="paragraph">paragraph</p>
+        <p class="paragraph">This Bubble and Pie Chart displays the following data types:
+            The variables on the x-axis and y-axis are attributes that are quantitative and sequential. The pie chart areas are another attribute which are categorical. The marks displayed are points and areas which are both used as nodes. The channels displayed in this visualization are the position on the x and y axis, the color of the pie chart pieces, the tilt of the pie slices, and the size (area) of each pie chart as a whole.
+            </p>
       </div>
       <div class="flex-item">
         <img src="/img/bump_chart.png" />
-        <p class="paragraph">paragraph</p>
+        <p class="paragraph">This Bump Chart displays the following data types:
+            The attributes shown in this bump chart are the ranks (from 1 to 5) which are ordinal, the years which are ordinal and sequential, and the elements (A, B, C, D, or E) which are categorical. The marks used in the chart are points and lines, both of which are used as nodes. The channels used in the chart are position, which describes an element’s rank at each year, color, which denotes each element, and tilt, which describes the change in rank from one year to another.
+            </p>
       </div>
       <div class="flex-item">
         <img src="/img/mind_map.png" />
-        <p class="paragraph">paragraph</p>
+        <p class="paragraph">This Mind Map displays themes, categories, and ideas, all of which are categorical attributes. The marks in this visualization are the areas, which indicate each node, and lines, which establish links between nodes. The channels used in this visualization are color and position. Blue is used to represent themes, while orange/red represent categories and ideas. Lines are positioned between areas (nodes) to show relationships between nodes.</p>
       </div>
       <div class="flex-item">
         <img src="/img/stacked_bar_chart.png" />
-        <p class="paragraph">paragraph</p>
+        <p class="paragraph">This Stacked Bar Chart displays the following data types:
+            On the x-axis, it is displaying a categorical attribute. On the y-axis, it displays a quantitative attribute with sequential ordering. Within each bar, there is also another categorical attribute being displayed (the colored subcategories within the bars). The marks in the visualization are the areas of the bars, indicating nodes. The channels of this visualization include position both horizontally and vertically, color, and size (height) of different colors within each bar. The position of each bar along the x-axis denotes what lettered category the data belongs to (A, B, C, or D). The position along the y-axis shows the total amount of each lettered category. The different colors within the bars denote subcategories. Lastly, the height of each color within the bar shows the amount of each subcategory.
+            </p>
       </div>
     </div>
     <div class="shapes-container">
